[gd_scene load_steps=16 format=3 uid="uid://buqi4u6wspsdh"]

[ext_resource type="Script" uid="uid://dte25glut3m1i" path="res://scenes/Entities/Monster/monster.gd" id="1_f33eb"]
[ext_resource type="Texture2D" uid="uid://crvuk5t38luge" path="res://scenes/Entities/Monster/oozey_diffuse.png" id="1_me0mp"]
[ext_resource type="ArrayMesh" uid="uid://c6fr2wmhq6ftl" path="res://scenes/Entities/Monster/Oozey.obj" id="2_f33eb"]
[ext_resource type="Texture2D" uid="uid://cq66phjkw4fqa" path="res://scenes/Entities/Monster/oozey_n.png" id="3_4w5ji"]
[ext_resource type="PackedScene" uid="uid://bej1n810ykpqo" path="res://Components/GravityComponent/gravity_component.tscn" id="4_f8dfg"]
[ext_resource type="Script" uid="uid://buq8whinohhby" path="res://scenes/Entities/Monster/raycast_manager.gd" id="6_mntuo"]
[ext_resource type="Script" uid="uid://dlk84cli12xos" path="res://scenes/Entities/Monster/chase_component.gd" id="6_nv8c5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8dfg"]
albedo_texture = ExtResource("1_me0mp")
metallic = 0.58
metallic_specular = 0.46
roughness = 0.34
normal_enabled = true
normal_texture = ExtResource("3_4w5ji")
texture_filter = 0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f8dfg"]
height = 4.21234
radius = 2.68994

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nv8c5"]
radius = 8.33257
height = 16.8756

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o1him"]
radius = 13.639
height = 36.5425

[sub_resource type="Animation" id="Animation_7j6xx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_ypvtw"]
resource_name = "chase"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36667, 0.86667, 1.33334, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.13439, 0), Vector3(0.436332, -0.13439, 0), Vector3(0, 0.13439, 0), Vector3(0.44855, 0.214676, 0), Vector3(0, 0.13439, 0)]
}

[sub_resource type="Animation" id="Animation_miga2"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.833333, 1.89612),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.443314, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ypvtw"]
_data = {
&"RESET": SubResource("Animation_7j6xx"),
&"chase": SubResource("Animation_ypvtw"),
&"idle": SubResource("Animation_miga2")
}

[node name="Monster" type="CharacterBody3D" node_paths=PackedStringArray("raycast_manager", "gravity_component", "chase_component", "animation_player", "mesh")]
collision_layer = 2
script = ExtResource("1_f33eb")
raycast_manager = NodePath("RaycastManager")
gravity_component = NodePath("GravityComponent")
chase_component = NodePath("ChaseComponent")
animation_player = NodePath("AnimationPlayer")
mesh = NodePath("Mesh")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.5, 0, 1.26759e-06, 0, 0.5, 0, -1.26759e-06, 0, -0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_f8dfg")
mesh = ExtResource("2_f33eb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.141591, 1.05542, -0.067973)
shape = SubResource("CylinderShape3D_f8dfg")

[node name="PlayerEntranceDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00364304, 0, 0.0280504)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerEntranceDetector"]
shape = SubResource("CapsuleShape3D_nv8c5")

[node name="PlayerExitDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00364304, 0, 0.0280504)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerExitDetector"]
shape = SubResource("CapsuleShape3D_o1him")

[node name="RaycastManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00364304, 0, 0.0280504)
script = ExtResource("6_mntuo")

[node name="CenterRaycast" type="RayCast3D" parent="RaycastManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000307083, 1.39969, -0.0130091)
target_position = Vector3(0, 0, 20)
collision_mask = 128

[node name="GravityComponent" parent="." instance=ExtResource("4_f8dfg")]

[node name="ChaseComponent" type="Node" parent="."]
script = ExtResource("6_nv8c5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ypvtw")
}

[connection signal="body_entered" from="PlayerEntranceDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerExitDetector" to="." method="_on_player_exit_detector_body_exited"]
